# sentence_segmentation

./: Cargo.toml  LICENSE  README.md  build.rs  cargo.toml
model/: thai_segmenter.onnx
src/: abbreviation_map.json  lib.rs
tests/: test.rs
