[package]
name = "sentence_segmentation"
version = "1.0.1"
edition = "2021"
authors = ["Soltia Luxiant <luxiante@gmail.com>"]
include = ["src/lib.rs", "src/abbreviation_map.json"]
description = "A rule-based sentence_segmenter, inspired by ruby pragmatic segmenter by diasks2 (repo: https://github.com/diasks2/pragmatic_segmenter)"
license = "MIT"
repository = "https://github.com/luxiant/sentence_segmentation"

[lib]
name = "sentence_segmentation"
path = "src/lib.rs"

[dependencies]
fancy-regex = "0.14.0"
regex = "1.11.1"
serde_json = "1.0.132"

[package.metadata]
include = ["src/abbreviation_map.json"]