[package]
name = "sentence_segmentation"
version = "1.3.0"
edition = "2021"
authors = ["Soltia Luxiant <luxiante@gmail.com>"]
include = ["src/lib.rs", "src/abbreviation_map.json", "model/thai_segmenter.onnx", "build.rs"]
description = "A rule-based sentence_segmenter, inspired by ruby pragmatic segmenter by diasks2 (repo: https://github.com/diasks2/pragmatic_segmenter). Now with optional AI-based Thai support."
license = "MIT"
repository = "https://github.com/luxiant/sentence_segmentation"

[lib]
name = "sentence_segmentation"
path = "src/lib.rs"

[features]
default = [] 
thai = ["dep:burn", "dep:burn-import"]

[dependencies]
fancy-regex = "0.14.0"
regex = "1.11.1"
serde_json = "1.0.132"
burn = { version = "0.19.1", features = ["ndarray"], optional = true }
anyhow = { version = "1.0", optional = true }

[package.metadata]
include = ["src/abbreviation_map.json", "model/thai_segmenter.onnx"]

[build-dependencies]
burn-import = { version = "0.19", optional = true }